.k8s/all-in-one.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: api-server
  name: api-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
      # redis
      - name: redis
        image: redis:4.0.9-alpine
        ports:
        - containerPort: 6379
        command: ["redis-server"]
        args: ["--requirepass", "$(REDIS_PASS)"]
      - name: gh-html
        image: gcr.io/oursky-kube/gh-html:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-server
  name: api-server
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: api-server
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: api-server
  name: api-server
  annotations:
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/proxy-body-size: 10m
spec:
  rules:
  - host: dochub.pandawork.com
    http:
      paths:
      - path: /
        backend:
          serviceName: api-server
          servicePort: 80
  tls:
  - hosts:
    - dochub.pandawork.com
    secretName: dochub
